Some more testing on jsconfig.h auto-generation; Removed some warnings when compiling agrep;
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@5496 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/src/jsconfig.in
+++ b/src/jsconfig.in
@@ -8,19 +8,19 @@
 ****** instalation directories ******
 */
 #ifndef BINDIR
-#define BINDIR        "/opt/local//bin"
+#define BINDIR        "[% PREFIX %]/bin"
 #endif
 #ifndef INDDIR
-#define INDDIR        "/opt/local//include"
+#define INDDIR        "[% PREFIX %]/include"
 #endif
 #ifndef LIBDIR
-#define LIBDIR        "/opt/local//lib/jspell"
+#define LIBDIR        "[% PREFIX %]/lib/jspell"
 #endif
 #ifndef MAN1DIR
-#define MAN1DIR        "/opt/local//man/man1"
+#define MAN1DIR        "[% PREFIX %]/man/man1"
 #endif
 #ifndef MAN4DIR
-#define MAN4DIR        "/opt/local//man/man4"
+#define MAN4DIR        "[% PREFIX %]/man/man4"
 #endif
 
 /*
