--- a/scripts/ujspell.in
+++ b/scripts/ujspell.in
@@ -7,27 +7,38 @@ use File::Basename;
 use File::Spec::Functions;
 use IPC::Open3;
 
+my $encontrei_l = 0;
+$encontrei_l = 1 if grep {$_ eq "-l"} @ARGV;
+
+unshift @ARGV, "-a" if !$encontrei_l;
+
 binmode(STDIN,":utf8");
 binmode(STDOUT,":utf8");
 
-
 my ($DW,$DR,$DE);
 my $exe = catfile("[% PREFIX %]","bin","jspell");
-open3($DW,$DR,$DE,$exe,"-a",@ARGV);
+open3($DW,$DR,$DE,$exe,@ARGV);
 
 binmode($DW,":encoding(iso-8859-1)");
 binmode($DR,":encoding(iso-8859-1)");
 
-my $x = <$DR>;
-print $x;
-
-
-while(<STDIN>) {
-	print $DW $_;
-	print_lines($DR);
+if ($encontrei_l) {
+	while (<STDIN>) {
+		print $DW $_;
+	}
+	close $DW;
+	while (<$DR>) {
+		print;
+	}
+} else {
+	my $x = <$DR>;
+	print $x;
+	while(<STDIN>) {
+		print $DW $_;
+		print_lines($DR);
+	}
+	close $_ for ($DW,$DR,$DE);	
 }
-
-close $_ for ($DW,$DR,$DE);
 
 sub print_lines {
 	my $handler = shift;
