--- a/scripts/jspell-dict.in
+++ b/scripts/jspell-dict.in
@@ -6,11 +6,14 @@ use warnings;
 use Getopt::Long;
 use File::Basename;
 use File::Spec::Functions;
+## use Lingua::Jspell::DictManager;
 
 my $libdir = catfile("[% PREFIX %]","lib","jspell");
 
-my ($exists, $listall, $dicdir);
+my ($exists, $listall, $dicdir, $name, $mkname);
 my $result = GetOptions("list-dics" => \$listall,
+			"gen-yaml=s" => \$mkname,
+			"install=s" => \$name,
 			"dic-dir" => \$dicdir,
 			"installed=s" => \$exists);
 
@@ -33,6 +36,38 @@ elsif ($exists) {
     print "no\n";
     exit(1);
   }
+}
+elsif($name) {
+## install_yaml_dic("$name.yaml") if -f "$name.yaml";
+#  if (-f "$name.yaml" && -f "$name.dic" && -f "$name.aff") {
+#  	install_dic({yaml=>"$name.yaml"},"$name.aff","$name.dic") if -f "$name.yaml" && -f "$name.dic" && -f "$name.aff";
+#  }
+#  else {
+#	die "Some required files not found\n";
+#  }
+}
+elsif($mkname) {
+#  if(-f "$mkname.yaml") { die "$mkname.yaml' already exists\n"}
+#  else { open(F,">$mkname.yaml") or die("Error: $!\n");
+#    print F qq{
+#META:
+# IDS: [$mkname]
+# TAG:
+#   CAT:
+#     card:
+#     nc: [G, N, GR]
+#     adj: [G, N, GR]
+#     a_nc: [G, N, GR]
+#     adv: [SUBCAT]
+#     v:
+#       T:
+#         vpp: [G, P, N]
+#         '-': [P, N]
+#     '-': [C, G, P, N]
+# PROPS:
+#};
+#     close F;
+#    }
 }
 
 else {
@@ -60,6 +95,14 @@ This is a simple interface to manage Jspell dictionaries. Main flags are used to
 =item C<--list-dics>
 
 List installed dictionaries
+
+=item C<--install=name>
+
+install jspell dictionary from name.yaml, name.aff name.dic
+
+=item C<--gen-yaml=name>
+
+Generates the YAML skeleton
 
 =item C<--dic-dir>
 
