jspell-dict -install ttt from:port _.hash   installa sem recalcular o hash   (será que os hash são portáveis?)   (será que um open binário ajudaria?)
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@7565 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/scripts/jspell-dict.in
+++ b/scripts/jspell-dict.in
@@ -43,12 +43,15 @@ elsif($name) {
   my @dic =();
   my @y=(name=>$name);
   my $aff = "";
+  my $hash ="";
   for(@ARGV){
     push(@dic,$_) if /\.dic$/;
+    $hash = $_ if /\.hash$/;
     $aff = $_ if /\.dic$/ || /from:/;
   }
   if (-f "$name.yaml")            { push(@y , yaml => "$name.yaml");  }
   if (-f "$name.irr")             { push(@y , irr  => "$name.irr" );  }
+  if ($hash)                      { push(@y , hash =>  $hash      );  }
   if (not @dic and -f "name.dic") { push(@dic ,"name.dic"); }
   if (not $aff and -f "name.$aff"){ $aff = "$name.aff"; }
 
