Removido um warning do Perl ao fazer C^d no final da iteração.
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@8351 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/scripts/ujspell.in
+++ b/scripts/ujspell.in
@@ -38,7 +38,7 @@ else {
         print $DW $_;
         print_lines($DR);
     }
-    close $_ for ($DW, $DR, $DE);	
+    for ($DW, $DR, $DE) { $_ and close $_ };	
 }
 
 sub print_lines {
