--- a/scripts/jspell-dict.in
+++ b/scripts/jspell-dict.in
@@ -8,7 +8,7 @@ use File::Basename;
 use File::Spec::Functions;
 use Lingua::Jspell::DictManager;
 
-my $libdir = catfile("[% PREFIX %]","lib","jspell");
+my $libdir = catfile("[% LIBDIR %]","jspell");
 
 my ($exists, $listall, $dicdir, $name, $mkname);
 my $result = GetOptions("list-dics"   => \$listall,
@@ -155,7 +155,7 @@ Alberto Manuel Brandão Simões, E<lt>ambs@cpan.orgE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2007-2009 by Projecto Natura
+Copyright (C) 2007-2010 by Projecto Natura
 
 =cut
 
