--- a/scripts/jspell-installdic.in
+++ b/scripts/jspell-installdic.in
@@ -16,13 +16,15 @@ my %dics;
 @dics{@dics}=@dics;
 ####################################
 
-my $language = lc(shift);
-die "Dictionary not available\n" unless exists $dics{$language}
+while (@ARGS) {
+    my $language = lc(shift @ARGS);
+    warn "Dictionary $language not available\n" unless exists $dics{$language};
 
-my $host = 'http://natura.di.uminho.pt/';
-my $url = "${host}download/sources/Dictionaries/jspell/jspell.${language}-bin-latest.tar.gz";
+    my $host = 'http://natura.di.uminho.pt/';
+    my $url = "${host}download/sources/Dictionaries/jspell/jspell.${language}-bin-latest.tar.gz";
 
-install_dic($url);
+    install_dic($url);
+}
 
 sub install_dic {
     my $dicurl = shift;
@@ -52,3 +54,30 @@ sub install_dic {
     }
 }
 
+
+=head1 NAME
+
+jspell-installdic - automates the installation of a remote jspell dictionary
+
+=head1 SYNOPSIS
+
+   jspell-installdic pt en
+
+=head1 DESCRIPTION
+
+Tries to fetch a binary jspell dictionary distribution for the
+supplied languages and install them on the system
+
+=head1 SEE ALSO
+
+jspell(1), Lingua::Jspell(3), perl(1)
+
+=head1 AUTHOR
+
+Alberto Manuel Brandão Simões, E<lt>ambs@cpan.orgE<gt>
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright (C) 2010 by Alberto Manuel Brandão Simões
+
+=cut
