Substituido " por ' nos sitios que serao interpolados por paths. Raio do windows e raio dos backslashes
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@8827 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/scripts/jspell-dict.in
+++ b/scripts/jspell-dict.in
@@ -8,7 +8,7 @@ use File::Basename;
 use File::Spec::Functions;
 use Lingua::Jspell::DictManager;
 
-my $libdir = catfile("[% LIBDIR %]","jspell");
+my $libdir = catfile('[% LIBDIR %]',"jspell");
 
 my ($exists, $listall, $dicdir, $name, $mkname);
 my $result = GetOptions("list-dics"   => \$listall,
