--- a/scripts/jspell-installdic.in
+++ b/scripts/jspell-installdic.in
@@ -15,7 +15,7 @@ use ExtUtils::Manifest qw/manicheck/;
 
 our ($v);
 
-our $LIBDIR = "[% LIBDIR %]";
+our $LIBDIR = '[% LIBDIR %]';
 
 ####################################
 my @dics = qw.en pt.;
