--- a/scripts/ujspell.in
+++ b/scripts/ujspell.in
@@ -16,7 +16,7 @@ binmode(STDIN,":utf8");
 binmode(STDOUT,":utf8");
 
 my ($DW,$DR,$DE);
-my $exe = catfile("[% BINDIR %]","jspell");
+my $exe = catfile('[% BINDIR %]',"jspell");
 open3($DW,$DR,$DE,$exe,@ARGV);
 
 binmode($DW,":encoding(iso-8859-1)");
