A preparar nova release. Everything seems to work
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@8828 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/scripts/jspell-installdic.in
+++ b/scripts/jspell-installdic.in
@@ -121,7 +121,10 @@ sub install_directory {
     $v and print STDERR "- creating .hash file...";
     my $JBUILD = which "jbuild";
     die "Need jbuild binary...\n" unless $JBUILD;
-    `cd _OUT; jbuild $lang.dic $lang.aff $lang.hash`;
+    my $cwd = getcwd;
+    chdir '_OUT';
+    `jbuild $lang.dic $lang.aff $lang.hash`;
+    chdir $cwd;
     $v and print STDERR " OK\n";
 
     # 7. try to create the output dir
