Corrigido bug estupido. Parece-me que estamos prontos para a nova release.
git-svn-id: https://natura.di.uminho.pt/svn/main/Lingua/Jspell@8833 f5ed0195-1f1e-0410-9bbf-87de9e03ec61

--- a/scripts/jspell-installdic.in
+++ b/scripts/jspell-installdic.in
@@ -27,7 +27,7 @@ for (@ARGV) {
     if (-d $_) {
         install_directory($_);
     } else {
-        my $language = lc(shift @ARGV);
+        my $language = lc;
         unless (exists $dics{$language}) {
             warn "Dictionary $language not available\n";
             next;
